# Bonzo

./: .gitignore  CMakeLists.txt  README.md
examples/: any.bz  basic_sentence.bz  comment.bz  complex_sentence.bz  func.bz  hello_world.bz  or.bz  rule.bz  tuple.bz
src/: main.cpp
src/ast/exprs/: AddExpr.cpp  AddExpr.h  InvocationExpr.cpp  InvocationExpr.h  OrExpr.cpp  OrExpr.h  StringExpr.cpp  StringExpr.h  TupleExpr.cpp  TupleExpr.h  VariableExpr.cpp  VariableExpr.h
src/ast/exprs/abstract/: BinExpr.cpp  BinExpr.h  Expr.h
src/ast/instructions/: FuncInstruction.cpp  FuncInstruction.h  Instruction.h  MatchInstruction.cpp  MatchInstruction.h  RuleInstruction.cpp  RuleInstruction.h
src/parsing/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
src/parsing/stream/: State.h  StreamSnippet.h
src/runtime/: Interpreter.cpp  Interpreter.h  MatchHandler.cpp  MatchHandler.h  RuntimeManager.cpp  RuntimeManager.h  Scope.cpp  Scope.h
src/runtime/values/: ArbitraryLengthValue.cpp  ArbitraryLengthValue.h  CharChoiceValue.cpp  CharChoiceValue.h  ExtFuncValue.cpp  ExtFuncValue.h  FuncValue.cpp  FuncValue.h  OptionalValue.cpp  OptionalValue.h  OrValue.cpp  OrValue.h  SeparatedValue.cpp  SeparatedValue.h  SomeValue.cpp  SomeValue.h  SpecialValue.cpp  SpecialValue.h  StringValue.cpp  StringValue.h  SumValue.cpp  SumValue.h  TupleValue.h
src/runtime/values/abstract/: CallableValue.h  CollectionValue.cpp  CollectionValue.h  RegValue.cpp  RegValue.h  Value.cpp  Value.h
src/utils/: ErrorOr.h  TextPosition.h  TextSnippet.h
tests/: Interface.cpp  Interface.h  RunTests.cpp
